Complete development environment setup with Firebase integration and translation features

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@ functions/lib
 .env.test.local
 .env.production.local
 
+# Firebase service account key (SECURITY: Never commit this!)
+functions/serviceAccountKey.json
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
