--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -1,20 +1,14 @@
-name: CI/CD Pipeline - GitHub → Firebase → Vercel
+name: CI/CD Pipeline - Build, Test, Deploy
 
 on:
   push:
     branches: [ main, develop ]
   pull_request:
     branches: [ main ]
-  workflow_dispatch:
-
-env:
-  NODE_VERSION: '18'
-  FIREBASE_PROJECT_ID: gpt1-77ce0
 
 jobs:
-  # Job 1: Code Quality & Testing
-  code-quality:
-    name: Code Quality & Testing
+  # Job 1: Build and Test Frontend
+  build-and-test:
     runs-on: ubuntu-latest
     
     steps:
@@ -24,36 +18,34 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: ${{ env.NODE_VERSION }}
+        node-version: '18'
         cache: 'npm'
         
     - name: Install dependencies
       run: npm ci
       
-    - name: Run ESLint
-      run: npm run lint || echo "ESLint warnings found (non-blocking)"
+    - name: Run linting
+      run: npm run lint
       
-    - name: Run TypeScript check
-      run: npx tsc --noEmit
-      
-    - name: Run tests (if available)
-      run: npm test --if-present --watchAll=false --passWithNoTests
+    - name: Run type checking
+      run: npm run type-check
       
     - name: Build application
       run: npm run build
+      
+    - name: Run tests
+      run: npm test -- --coverage --watchAll=false
       
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
       with:
         name: build-files
         path: build/
-        retention-days: 1
 
-  # Job 2: Firebase Backend Deployment
-  firebase-backend:
-    name: Deploy Firebase Backend
+  # Job 2: Deploy Firebase Functions
+  deploy-firebase-functions:
+    needs: build-and-test
     runs-on: ubuntu-latest
-    needs: code-quality
     if: github.ref == 'refs/heads/main'
     
     steps:
@@ -63,137 +55,53 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: ${{ env.NODE_VERSION }}
+        node-version: '18'
         cache: 'npm'
         
     - name: Install Firebase CLI
       run: npm install -g firebase-tools
       
-    - name: Deploy Firebase Functions
+    - name: Install function dependencies
       run: |
-        echo "Deploying Firebase Functions..."
-        cd ../docvault
+        cd functions
         npm ci
         npm run build
-        firebase deploy --only functions:docvault --project ${{ env.FIREBASE_PROJECT_ID }} --token "${{ secrets.FIREBASE_TOKEN }}"
-      env:
-        FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
         
-    - name: Deploy Firebase Storage Rules
-      run: |
-        firebase deploy --only storage --project ${{ env.FIREBASE_PROJECT_ID }} --token "${{ secrets.FIREBASE_TOKEN }}"
+    - name: Deploy to Firebase
+      run: firebase deploy --only functions --token "${{ secrets.FIREBASE_TOKEN }}"
       env:
-        FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-        
-    - name: Deploy Firestore Rules
-      run: |
-        firebase deploy --only firestore:rules --project ${{ env.FIREBASE_PROJECT_ID }} --token "${{ secrets.FIREBASE_TOKEN }}"
-      env:
-        FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+        GOOGLE_TRANSLATE_API_KEY: ${{ secrets.GOOGLE_TRANSLATE_API_KEY }}
+        GOOGLE_LANGUAGE_API_KEY: ${{ secrets.GOOGLE_LANGUAGE_API_KEY }}
 
-  # Job 3: Vercel Frontend Deployment
-  vercel-frontend:
-    name: Deploy to Vercel
+  # Job 3: Deploy to Vercel
+  deploy-vercel:
+    needs: build-and-test
     runs-on: ubuntu-latest
-    needs: [code-quality, firebase-backend]
     if: github.ref == 'refs/heads/main'
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ env.NODE_VERSION }}
-        cache: 'npm'
-        
-    - name: Install dependencies
-      run: npm ci
-      
-    - name: Check Vercel Secrets
-      run: |
-        echo "Checking Vercel deployment secrets..."
-        if [ -z "${{ secrets.VERCEL_TOKEN }}" ]; then
-          echo "❌ VERCEL_TOKEN secret is not set"
-          echo "Please add VERCEL_TOKEN to your GitHub repository secrets"
-          exit 1
-        fi
-        if [ -z "${{ secrets.VERCEL_ORG_ID }}" ]; then
-          echo "❌ VERCEL_ORG_ID secret is not set"
-          echo "Please add VERCEL_ORG_ID to your GitHub repository secrets"
-          exit 1
-        fi
-        if [ -z "${{ secrets.VERCEL_PROJECT_ID }}" ]; then
-          echo "❌ VERCEL_PROJECT_ID secret is not set"
-          echo "Please add VERCEL_PROJECT_ID to your GitHub repository secrets"
-          exit 1
-        fi
-        echo "✅ All Vercel secrets are configured"
-        
-    - name: Build application
-      run: npm run build
-      env:
-        REACT_APP_FIREBASE_API_KEY: ${{ secrets.REACT_APP_FIREBASE_API_KEY }}
-        REACT_APP_FIREBASE_AUTH_DOMAIN: ${{ secrets.REACT_APP_FIREBASE_AUTH_DOMAIN }}
-        REACT_APP_FIREBASE_PROJECT_ID: ${{ secrets.REACT_APP_FIREBASE_PROJECT_ID }}
-        REACT_APP_FIREBASE_STORAGE_BUCKET: ${{ secrets.REACT_APP_FIREBASE_STORAGE_BUCKET }}
-        REACT_APP_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID }}
-        REACT_APP_FIREBASE_APP_ID: ${{ secrets.REACT_APP_FIREBASE_APP_ID }}
-        
     - name: Deploy to Vercel
       uses: amondnet/vercel-action@v25
       with:
         vercel-token: ${{ secrets.VERCEL_TOKEN }}
         vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
         vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
+        working-directory: ./
         vercel-args: '--prod'
-      continue-on-error: true
-        
-    - name: Comment PR with deployment info
-      if: github.event_name == 'pull_request'
-      uses: actions/github-script@v7
-      with:
-        script: |
-          github.rest.issues.createComment({
-            issue_number: context.issue.number,
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            body: `🚀 **Deployment Complete!**
-          
-          **Frontend**: https://docsort.vercel.app
-          **Backend**: Firebase Functions deployed
-          **Status**: ✅ Success
-          
-          Changes deployed to production!`
-          })
 
-  # Job 4: Post-Deployment Verification
-  verification:
-    name: Post-Deployment Verification
+  # Job 4: Update deployment status
+  update-status:
+    needs: [deploy-firebase-functions, deploy-vercel]
     runs-on: ubuntu-latest
-    needs: [vercel-frontend]
     if: github.ref == 'refs/heads/main'
     
     steps:
-    - name: Check Vercel deployment
+    - name: Update deployment status
       run: |
-        echo "Checking Vercel deployment..."
-        if curl -f https://docsort.vercel.app; then
-          echo "✅ Vercel deployment is live!"
-        else
-          echo "⚠️ Vercel deployment check failed - this may be expected if Vercel secrets are not configured"
-          echo "Please configure VERCEL_TOKEN, VERCEL_ORG_ID, and VERCEL_PROJECT_ID secrets"
-        fi
-        
-    - name: Check Firebase Functions
-      run: |
-        echo "Checking Firebase Functions..."
-        curl -f https://us-central1-${{ env.FIREBASE_PROJECT_ID }}.cloudfunctions.net/getStorageUsage || echo "⚠️ Firebase Functions check failed (may be expected)"
-        
-    - name: Send notification
-      run: |
-        echo "🎉 CI/CD Pipeline completed successfully!"
-        echo "Frontend: https://docsort.vercel.app"
-        echo "Backend: Firebase Storage, Firestore, and Functions deployed"
-        echo "Functions: https://us-central1-${{ env.FIREBASE_PROJECT_ID }}.cloudfunctions.net"
+        echo "🚀 Deployment completed successfully!"
+        echo "✅ Firebase Functions deployed"
+        echo "✅ Frontend deployed to Vercel"
+        echo "🌐 Your app is now live!"
