--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,7 @@
 {
   "projects": {
-    "production": "gpt1-77ce0"
+    "production": "gpt1-77ce0",
+    "default": "gpt1-77ce0"
   },
   "targets": {},
   "etags": {}
