--- a/package.json
+++ b/package.json
@@ -1,11 +1,32 @@
 {
-  "name": "appvault",
-  "version": "0.1.0",
+  "name": "docvault",
+  "version": "1.0.0",
+  "description": "A modern, secure document management system with AI-powered features",
+  "keywords": [
+    "document-management",
+    "react",
+    "supabase",
+    "typescript",
+    "ai",
+    "ocr",
+    "security"
+  ],
+  "author": "DocVault Team",
+  "license": "MIT",
+  "homepage": "https://docvault.netlify.app",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/erector666/DocVault.git"
+  },
+  "bugs": {
+    "url": "https://github.com/erector666/DocVault/issues"
+  },
   "private": true,
   "dependencies": {
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.56.1",
+    "@tanstack/react-query": "^5.85.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,26 +37,33 @@
     "@types/react-dom": "^18.0.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "es-abstract": "^1.24.0",
     "firebase": "^10.14.1",
     "framer-motion": "^9.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-query": "^3.39.3",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.2.4",
+    "tesseract.js": "^6.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "test:unit": "jest --config=jest.config.js --coverage",
+    "test:integration": "jest --config=jest.config.js --testPathPattern=integration",
+    "test:e2e:staging": "cypress run --config baseUrl=https://staging--docvault.netlify.app",
+    "test:e2e:production": "cypress run --config baseUrl=https://docvault.netlify.app",
     "lint": "eslint src --ext .ts,.tsx,.js,.jsx",
     "lint:fix": "eslint src --ext .ts,.tsx,.js,.jsx --fix",
     "type-check": "tsc --noEmit",
-    "ci": "npm run lint && npm run type-check && npm run build"
+    "analyze": "npm run build && npx webpack-bundle-analyzer build/static/js/*.js",
+    "health-check": "node scripts/health-check.js",
+    "ci": "npm run lint && npm run type-check && npm run build",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
