--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@testsprite/testsprite-mcp": "^0.0.13",
     "@types/firebase": "^2.4.32",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.11",
