Update project with TestSprite integration, new scripts, and component improvements

--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.56.1",
-    "@tanstack/react-query": "^5.85.8",
+    "@tanstack/react-query": "^5.85.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@testsprite/testsprite-mcp": "^0.0.13",
     "@types/firebase": "^2.4.32",
-    "@types/jest": "^27.5.2",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
@@ -42,6 +42,8 @@
     "es-abstract": "^1.24.0",
     "firebase": "^10.14.1",
     "framer-motion": "^9.0.1",
+    "jspdf": "^3.0.2",
+    "lucide-react": "^0.542.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
@@ -56,6 +58,11 @@
     "test": "react-scripts test",
     "test:unit": "jest --config=jest.config.js --coverage",
     "test:integration": "jest --config=jest.config.js --testPathPattern=integration",
+    "test:testsprite": "node scripts/run-testsprite-tests.js",
+    "cleanup:check": "node scripts/cleanup-orphaned-files.js",
+    "cleanup:db": "node scripts/cleanup-orphaned-files.js --db-only",
+    "cleanup:storage": "node scripts/cleanup-orphaned-files.js --storage-only",
+    "cleanup:all": "node scripts/cleanup-orphaned-files.js --cleanup-all",
     "test:e2e:staging": "cypress run --config baseUrl=https://staging--docvault.netlify.app",
     "test:e2e:production": "cypress run --config baseUrl=https://docvault.netlify.app",
     "lint": "eslint src --ext .ts,.tsx,.js,.jsx",
@@ -64,6 +71,8 @@
     "analyze": "npm run build && npx webpack-bundle-analyzer build/static/js/*.js",
     "health-check": "node scripts/health-check.js",
     "ci": "npm run lint && npm run type-check && npm run build",
+    "ci:security": "npm audit --audit-level=high || true",
+    "ci:test": "npm run test:unit && npm run test:integration",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -85,6 +94,14 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
+    "core-js-pure": "^3.45.1",
+    "dotenv": "^17.2.1",
+    "html-webpack-plugin": "^5.6.4",
+    "identity-obj-proxy": "^3.0.0",
+    "jest-canvas-mock": "^2.5.2",
+    "jest-transform-stub": "^2.0.0",
+    "ts-jest": "^29.4.1",
     "typescript": "^4.9.5",
     "web-streams-polyfill": "^4.2.0"
   }
